create and delete opening docs
